crates/loxia-tui/src/views/snapshots/loxia_tui__views__playlists__tests__playlist_tracks_snapshot.snap
---
source: crates/loxia-tui/src/views/playlists.rs
assertion_line: 207
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        "┌Playlists───────────────────┐┌Late Night Drives───────────┐            ┌──────────────┐            ",
        "│Late Night Drives           ││Motion                  3:00│            │              │            ",
        "│                            ││Fate                    3:00│            │              │            ",
        "│                            ││                            │            │              │            ",
        "│                            ││                            │            │       ♪      │            ",
        "│                            ││                            │            │              │            ",
        "│                            ││                            │            │              │            ",
        "│                            ││                            │            └──────────────┘            ",
        "│                            ││                            │Motion                                  ",
        "│                            ││                            │Boy Harsher                             ",
        "│                            ││                            │Care                                    ",
        "│                            ││                            │2019 · Disc 1, Track 1                  ",
        "│                            ││                            │3:00                                    ",
        "│                            ││                            │FLAC 16-bit / 44.1 kHz                  ",
        "│                            ││                            │1000 kbps                               ",
        "│                            ││                            │Played 0 times                          ",
        "│                            ││                            │Actions:                                ",
        "│                            ││                            │[enter] Play (Replace Queue)            ",
        "│                            ││                            │[A] Add to Queue                        ",
        "│                            ││                            │[i] Insert Next                         ",
        "│                            ││                            │[m] Instant Mix                         ",
        "│                            ││                            │[ctrl+p] Add to Playlist                ",
        "│                            ││                            │[d] Download                            ",
        "└────────────────────────────┘└────────────────────────────┘[f] Favourite                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 0, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Indexed(8), underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: Indexed(15), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 13, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 14, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 15, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 16, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 16, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 17, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 18, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 19, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 20, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 21, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 22, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 23, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
